Fix menu not showing

--- a/code/UI/CourseTimer.scss
+++ b/code/UI/CourseTimer.scss
@@ -3,6 +3,9 @@
 
 CourseTimer {
     width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
 
     .timer {
         position: absolute;
